--- a/touring-fe/index.html
+++ b/touring-fe/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Travyy</title>
+    <meta name="description" content="Travyy - Your Ultimate Travel Companion" />
+    <meta name="keywords" content="travel, tours, booking, destinations, adventures" />
+    <meta name="author" content="Travyy" />
+    <meta property="og:title" content="Travyy - Your Ultimate Travel Companion" />
   </head>
   <body>
     <div id="root"></div>
