--- a/touring-fe/index.html
+++ b/touring-fe/index.html
@@ -1,17 +1,80 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="logo.png" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travyy</title>
+
     <meta name="description" content="Travyy - Your Ultimate Travel Companion" />
     <meta name="keywords" content="travel, tours, booking, destinations, adventures" />
     <meta name="author" content="Travyy" />
     <meta property="og:title" content="Travyy - Your Ultimate Travel Companion" />
+
+    <style>
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+
+      /* Fade out */
+      .fade-out {
+        opacity: 0;
+        transition: opacity 0.6s ease-out;
+        pointer-events: none;
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <!-- Preloader splash -->
+      <div
+        id="startup-loader"
+        style="
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          gap: 20px;
+          height: 100vh;
+          font-family: sans-serif;
+          color: white;
+        "
+      >
+        <!-- Logo -->
+        <img src="/logo.png" alt="App Logo" style="width: 100px; height: auto" />
+
+        <!-- Spinner -->
+        <div
+          style="
+            width: 60px;
+            height: 60px;
+            border: 6px solid rgba(255, 255, 255, 0.3);
+            border-top: 6px solid #fff;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+          "
+        ></div>
+
+        <!-- Text -->
+        <p style="font-size: 16px; font-weight: 500">Đang tải ứng dụng...</p>
+      </div>
+    </div>
+
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
+    <script>
+      // Khi React app mount xong -> xóa preloader
+      window.addEventListener("load", () => {
+        const loader = document.getElementById("startup-loader");
+        if (loader) {
+          setTimeout(() => {
+            loader.classList.add("fade-out");
+            setTimeout(() => loader.remove(), 600); 
+          }, 1000); 
+        }
+      });
+    </script>
   </body>
 </html>
