AI embedding v1, some routes

--- a/touring-fe/index.html
+++ b/touring-fe/index.html
@@ -6,15 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travyy</title>
 
-    <meta name="description" content="Travyy - Your Ultimate Travel Companion" />
-    <meta name="keywords" content="travel, tours, booking, destinations, adventures" />
+    <meta
+      name="description"
+      content="Travyy - Your Ultimate Travel Companion"
+    />
+    <meta
+      name="keywords"
+      content="travel, tours, booking, destinations, adventures"
+    />
     <meta name="author" content="Travyy" />
-    <meta property="og:title" content="Travyy - Your Ultimate Travel Companion" />
+    <meta
+      property="og:title"
+      content="Travyy - Your Ultimate Travel Companion"
+    />
 
     <style>
       @keyframes spin {
-        0% { transform: rotate(0deg); }
-        100% { transform: rotate(360deg); }
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
       }
 
       /* Fade out */
@@ -42,7 +55,11 @@
         "
       >
         <!-- Logo -->
-        <img src="/logo.png" alt="App Logo" style="width: 100px; height: auto" />
+        <img
+          src="/logo.png"
+          alt="App Logo"
+          style="width: 100px; height: auto"
+        />
 
         <!-- Spinner -->
         <div
@@ -71,8 +88,8 @@
         if (loader) {
           setTimeout(() => {
             loader.classList.add("fade-out");
-            setTimeout(() => loader.remove(), 600); 
-          }, 1000); 
+            setTimeout(() => loader.remove(), 600);
+          }, 1000);
         }
       });
     </script>
